<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sui_indexer</name>
  <version>0.0.0</version>
  <description>A ROS2 package for indexing Sui blockchain events</description>
  <maintainer email="irvsteve@gmail.com">kpatch</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  
  <!-- Message dependencies -->
  <build_depend>sui_indexer_msgs</build_depend>
  <exec_depend>sui_indexer_msgs</exec_depend>
  
  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- Runtime dependencies -->
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
